r1/firewall-router1.conf
# Generated by xtables-save v1.8.2 on Sun Jul 23 16:28:10 2023
*mangle
:PREROUTING ACCEPT [1685:116908]
:INPUT ACCEPT [862:63993]
:FORWARD ACCEPT [70:4819]
:OUTPUT ACCEPT [848:61224]
:POSTROUTING ACCEPT [908:65260]
-A PREROUTING -i eth0 -j MARK --set-xmark 0x6/0xffffffff
-A PREROUTING -i eth2.100 -j MARK --set-xmark 0x7/0xffffffff
-A PREROUTING -s 10.0.1.0/24 -i eth1 -j MARK --set-xmark 0x5/0xffffffff
-A PREROUTING -s 10.0.1.50/32 -i eth1 -j MARK --set-xmark 0x32/0xffffffff
-A PREROUTING -s 10.0.1.51/32 -i eth1 -j MARK --set-xmark 0x33/0xffffffff
-A PREROUTING -s 10.0.1.52/32 -i eth1 -j MARK --set-xmark 0x34/0xffffffff
-A PREROUTING -s 10.0.1.100/32 -i eth1 -j MARK --set-xmark 0x64/0xffffffff
-A PREROUTING -s 10.0.1.101/32 -i eth1 -j MARK --set-xmark 0x65/0xffffffff
-A PREROUTING -s 10.0.1.102/32 -i eth1 -j MARK --set-xmark 0x66/0xffffffff
-A PREROUTING -s 10.0.1.103/32 -i eth1 -j MARK --set-xmark 0x67/0xffffffff
COMMIT
# Completed on Sun Jul 23 16:28:10 2023
# Generated by xtables-save v1.8.2 on Sun Jul 23 16:28:10 2023
*nat
:PREROUTING ACCEPT [798:51011]
:INPUT ACCEPT [8:886]
:POSTROUTING ACCEPT [17:1017]
:OUTPUT ACCEPT [2:132]
:DOCKER_OUTPUT - [0:0]
:DOCKER_POSTROUTING - [0:0]
-A PREROUTING -d 149.50.83.193/32 -p tcp -m tcp --dport 443 -m statistic --mode random --probability 0.50000000000 -j DNAT --to-destination 10.0.3.50:443
-A PREROUTING -d 149.50.83.193/32 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.0.3.51:443
-A POSTROUTING -d 127.0.0.11/32 -j DOCKER_POSTROUTING
-A POSTROUTING -o eth4 -j MASQUERADE
-A POSTROUTING -o eth5 -j MASQUERADE
-A OUTPUT -d 127.0.0.11/32 -j DOCKER_OUTPUT
-A DOCKER_OUTPUT -d 127.0.0.11/32 -p tcp -m tcp --dport 53 -j DNAT --to-destination 127.0.0.11:45283
-A DOCKER_OUTPUT -d 127.0.0.11/32 -p udp -m udp --dport 53 -j DNAT --to-destination 127.0.0.11:57754
-A DOCKER_POSTROUTING -s 127.0.0.11/32 -p tcp -m tcp --sport 45283 -j SNAT --to-source :53
-A DOCKER_POSTROUTING -s 127.0.0.11/32 -p udp -m udp --sport 57754 -j SNAT --to-source :53
COMMIT
# Completed on Sun Jul 23 16:28:10 2023
# Generated by xtables-save v1.8.2 on Sun Jul 23 16:28:10 2023
*filter
:INPUT DROP [13:2692]
:FORWARD DROP [10:783]
:OUTPUT ACCEPT [848:61224]
-A INPUT -i eth4 -p udp -m udp --dport 1194 -j ACCEPT
-A INPUT -i tun0 -j ACCEPT
-A INPUT -i eth4 -p icmp -m icmp --icmp-type 8 -m limit --limit 2/sec -j ACCEPT
-A INPUT -i eth5 -p icmp -m icmp --icmp-type 8 -m limit --limit 2/sec -j ACCEPT
-A INPUT -i eth4 -p ospf -j ACCEPT
-A INPUT -i eth5 -p ospf -j ACCEPT
-A FORWARD -d 10.0.1.0/24 -i tun0 -j ACCEPT
-A FORWARD -s 10.0.1.0/24 -o tun0 -j ACCEPT
-A FORWARD -d 10.0.3.0/24 -i tun0 -m state --state NEW,ESTABLISHED -j ACCEPT
-A FORWARD -s 10.0.3.0/24 -o tun0 -m state --state ESTABLISHED -j ACCEPT
-A FORWARD -i eth1 -o eth3 -m state --state NEW -j ACCEPT
-A FORWARD -d 10.0.1.50/32 -i eth0 -o eth1 -m state --state NEW -j ACCEPT
-A FORWARD -d 10.0.1.52/32 -i eth2.100 -o eth1 -m state --state NEW -j ACCEPT
-A FORWARD -d 10.0.3.52/32 -i eth2.100 -o eth3 -m state --state NEW -j ACCEPT
-A FORWARD -i eth0 -o eth5 -m state --state NEW -j ACCEPT
-A FORWARD -i eth1 -o eth5 -m state --state NEW -j ACCEPT
-A FORWARD -i eth2.100 -o eth5 -m state --state NEW -j ACCEPT
-A FORWARD -i eth3 -o eth4 -m state --state NEW -j ACCEPT
-A FORWARD -i eth4 -o eth3 -p tcp -m tcp --dport 443 -j ACCEPT
-A FORWARD -m state --state ESTABLISHED -j ACCEPT
-A FORWARD -i eth4 -p ospf -j ACCEPT
-A FORWARD -i eth5 -p ospf -j ACCEPT
COMMIT
# Completed on Sun Jul 23 16:28:10 2023
